--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -5,7 +5,7 @@
         "content": [
             {
                 "type": "group",
-                "header": "Show unimplemented locations? is the pit on?",
+                "header": "General Settings",
                 "description": "Enable/Disable the automatic fill of the settings panel from for connected Slot_Data",
                 "header_background": "#3e4b57",
                 "content": [
@@ -21,6 +21,7 @@
                             [
                                 "HiddenOn",
                                 "PitOn",
+                                "PalaceSkip",
                             ]
                         ]
                     }
@@ -57,14 +58,53 @@
             },
             {
                 "type": "group",
-                "header": "message ZobeePlays in discord if you find bugs!",
+                "header": "Limit Chapter Logic",
                 "description": "Enable/Disable the automatic fill of the settings panel from for connected Slot_Data",
                 "header_background": "#3e4b57",
                 "content": [
                     {
-                        "type": "item",
-                        "margin": "5,1,5,5",
-                        "item": "retro_caves"
+                        "type": "itemgrid",
+                        "item_margin": "2, 2",
+                        "h_alignment": "left",
+                        "item_h_alignment": "center",
+                        "item_v_alignment": "center",
+                        "item_height": 36,
+                        "item_width": 36,
+                        "rows": [
+                            [
+                                "Ch1",
+                                "Ch2",
+                                "Ch3",
+                                "Ch4",
+                                "Ch5",
+                                "Ch6",
+                                "Ch7",
+                                "Ch8"
+                            ]
+                        ]
+                    }
+                ]
+            },
+            {
+                "type": "group",
+                "header": "If you find a bug, please report it in the discord!",
+                "description": "Enable/Disable the automatic fill of the settings panel from for connected Slot_Data",
+                "header_background": "#3e4b57",
+                "content": [
+                    {
+                        "type": "itemgrid",
+                        "item_margin": "2, 2",
+                        "h_alignment": "left",
+                        "item_h_alignment": "center",
+                        "item_v_alignment": "center",
+                        "item_height": 36,
+                        "item_width": 36,
+                        "rows": [
+                            [
+                                "Discord",
+                                "Zobee"
+                            ]
+                        ]
                     }
                 ]
             }
