--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "game_name": "TTYD",
     "package_version": "0.9.3",
     "package_uid": "ttyd_ap",
-    "author": "ZobeePlays",
+    "author": "ZobeePlays", "earthor1"
     "variants": {
         "OGSprites": {
             "display_name": "Items Only - OG Sprites",
@@ -36,7 +36,7 @@
         "var_SwitchRemakeNoOutlinesWithMap": {
             "display_name": "Map Tracker - Switch Remake No Outlines",
             "flags": ["ap"]
-    },
+    }
     },
     "min_poptracker_version": "0.27.0"
 }
