--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "game_name": "TTYD",
     "package_version": "0.9.3",
     "package_uid": "ttyd_ap",
-    "author": "ZobeePlays", "earthor1"
+    "author": "ZobeePlays & earthor1",
     "variants": {
         "OGSprites": {
             "display_name": "Items Only - OG Sprites",
