--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -22,6 +22,7 @@
                                 "HiddenOn",
                                 "PitOn",
                                 "PalaceSkip",
+                                "AutoTabOn"
                             ]
                         ]
                     }
