Updating Map order

--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
     "package_uid": "ttyd_ap",
     "author": "ZobeePlays & earthor1",
     "variants": {
-        "OGSprites": {
+        "var_Default": {
             "display_name": "Items Only - OG Sprites",
             "flags": ["ap"]
     },
-        "var_RequiredOnly": {
-            "display_name": "Items Only - Required Only (OG Sprites)",
+        "var_Default_RequiredOnly": {
+            "display_name": "Items Only - OG Sprites (Required Only)",
             "flags": ["ap"]
     },
         "var_DolphinHDTexturePack": {
@@ -21,16 +21,16 @@
             "display_name": "Badges Only",
             "flags": ["ap"]
     },
-        "var_SwitchRemakeWithOutlines": {
+        "var_ItemsOnlySwitchRemakeWithOutlines": {
             "display_name": "Items Only - Switch Remake With Outlines",
             "flags": ["ap"]
     },
-        "var_SwitchRemakeNoOutlines": {
+        "var_ItemsOnlySwitchRemakeNoOutlines": {
             "display_name": "Items Only - Switch Remake No Outlines",
             "flags": ["ap"]
     },
         "var_OGSpritesWithMap": {
-            "display_name": "(WIP) Map Tracker - OG Sprites",
+            "display_name": "Map Tracker - OG Sprites",
             "flags": ["ap"]
     },
         "var_SwitchRemakeNoOutlinesWithMap": {
