--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "TTYD Key Item Tracker",
     "game_name": "TTYD",
-    "package_version": "1.0.0",
+    "package_version": "0.1003985923.9",
     "package_uid": "ttyd_ap",
     "author": "ZobeePlays & earthor1",
     "variants": {
