--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -23,6 +23,7 @@
                                 "palace_skip",
                                 "Chapter_Clears",
                                 "open_westside",
+                                "IWantThere2BeASpaceHereSoYeah",
                                 "AutoTabOn",
                                 "PlayerTrackOn"
                             ]
