Implementing additional goals

--- a/items/settings.json
+++ b/items/settings.json
@@ -286,5 +286,30 @@
                   "inherit_codes": false
               }
           ]
+      },
+      {
+          "name": "Goal",
+          "type": "progressive",
+          "allow_disabled": false,
+          "stages":[
+              {
+                  "name": "Goal: Defeat Shadow Queen",
+                  "img": "images/items/ShadowQueen.png",
+                  "codes": "goal, defeat_shadow_queen",
+                  "inherit_codes": false
+              },
+              {
+                  "name": "Goal: Crystal Star Hunt",
+                  "img": "images/items/CrystalStar.png",
+                  "codes": "goal, crystal_star",
+                  "inherit_codes": false
+              },
+              {
+                  "name": "Goal: Defeat Bonetail",
+                  "img": "/images/tattles/Bonetail.png",
+                  "codes": "goal, defeat_bonetail",
+                  "inherit_codes": false
+              }
+          ]
       }
 ]
