--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -25,6 +25,7 @@
                                 "open_westside",
                                 "GlitchedLogic",
                                 "Tattlesanity",
+                                "Goal",
                                 "AutoTabOn",
                                 "PlayerTrackOn"
                             ]
