Adding palace_stars as settings_mapping ahead of chapter_clears being deprecated

--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -21,7 +21,7 @@
                                 "HiddenOn",
                                 "Pit_Items",
                                 "palace_skip",
-                                "Chapter_Clears",
+                                "DoorReq",
                                 "open_westside",
                                 "GlitchedLogic",
                                 "Tattlesanity",
