--- a/items/settings.json
+++ b/items/settings.json
@@ -15,56 +15,56 @@
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay0.png,",
                 "inherit_codes": false,
-                "codes": "Chapter0, Chapter_Clears"
+                "codes": "Chapter0, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 1",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay1.png,",
                 "inherit_codes": false,
-                "codes": "Chapter1, Chapter_Clears"
+                "codes": "Chapter1, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 2",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay2.png,",
                 "inherit_codes": false,
-                "codes": "Chapter2, Chapter_Clears"
+                "codes": "Chapter2, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 3",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay3.png,",
                 "inherit_codes": false,
-                "codes": "Chapter3, Chapter_Clears"
+                "codes": "Chapter3, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 4",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay4.png,",
                 "inherit_codes": false,
-                "codes": "Chapter4, Chapter_Clears"
+                "codes": "Chapter4, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 5",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay5.png,",
                 "inherit_codes": false,
-                "codes": "Chapter5, Chapter_Clears"
+                "codes": "Chapter5, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 6",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay6.png,",
                 "inherit_codes": false,
-                "codes": "Chapter6, Chapter_Clears"
+                "codes": "Chapter6, Chapter_Clears, Palace_Stars, DoorReq"
             },
             {
                 "name": "Chapter 7",
                 "img": "images/items/CrystalStar.png",
                 "img_mods": "overlay|/images/Items/Overlay7.png,",
                 "inherit_codes": false,
-                "codes": "Chapter7, Chapter_Clears"
+                "codes": "Chapter7, Chapter_Clears, Palace_Stars, DoorReq"
             }
         ]
     },
