--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -25,7 +25,10 @@
                                 "open_westside",
                                 "GlitchedLogic",
                                 "Tattlesanity",
-                                "Goal",
+                                "Goal"
+                            ],
+                            [
+                                "piecesanity",
                                 "AutoTabOn",
                                 "PlayerTrackOn"
                             ]
