Fix for the following: - Great Tree not account for Super Boots in certain scenarios - post-chapter 5 tattles not checking for Cortez access - correcting disable_intermissions not indexing from 0 - correcting $pit not accounting for open_westside setting

--- a/items/settings.json
+++ b/items/settings.json
@@ -274,6 +274,7 @@
     {
           "name": "Disable Intermission",
           "type": "progressive",
+          "allow_disabled": false,
           "stages":[
               {
                   "name": "Disable Intermission off",
