--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -29,6 +29,7 @@
                             ],
                             [
                                 "piecesanity",
+                                "dazzle_rewards",
                                 "AutoTabOn",
                                 "PlayerTrackOn"
                             ]
